# finit-plugins

./: .gitignore  ChangeLog.md  Makefile  Makefile.am  README.md  configure.ac
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: build.yml  release.yml
src/: Makefile.am  chronyd.c  qmi-proxy.c
